--- a/pom.xml
+++ b/pom.xml
@@ -4,24 +4,63 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <!--
+      O "parent" do Spring Boot gerencia todas as versões das dependências
+      para que não precisemos nos preocupar com compatibilidade.
+    -->
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.2.0</version> <!-- Usando uma versão recente e estável -->
+        <relativePath/>
+    </parent>
+
     <groupId>br.com.assistente.pet</groupId>
-    <artifactId>meu-assistente-pet</artifactId>
+    <artifactId>meu-assistente-pet-api</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- Mantemos a versão do Java -->
+        <java.version>17</java.version>
     </properties>
 
     <dependencies>
-        <!-- Dependência para o conector do MySQL -->
-        <!-- Isso permite que nossa aplicação Java se comunique com o banco de dados MySQL. -->
+        <!--
+          DEPENDÊNCIAS DO SPRING BOOT (NOVAS)
+        -->
+
+        <!-- 1. Starter para criar APIs Web (inclui o servidor Tomcat) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <!-- 2. Starter para JDBC (facilita o acesso ao banco e gerencia o pool de conexões) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+
+        <!--
+          DEPENDÊNCIA DO BANCO (A MESMA DE ANTES, ATUALIZADA)
+        -->
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
-            <version>8.0.33</version>
+            <version>8.4.0</version>
         </dependency>
+
     </dependencies>
 
+    <build>
+        <plugins>
+            <!-- Plugin principal do Spring Boot para "empacotar" a aplicação -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
+
