--- a/pom.xml
+++ b/pom.xml
@@ -4,60 +4,77 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <!--
-      O "parent" do Spring Boot gerencia todas as versões das dependências
-      para que não precisemos nos preocupar com compatibilidade.
-    -->
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.0</version> <!-- Usando uma versão recente e estável -->
-        <relativePath/>
-    </parent>
-
+    <!-- O nome do seu projeto, usado pelo Spring Boot -->
     <groupId>br.com.assistente.pet</groupId>
     <artifactId>meu-assistente-pet-api</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <!-- Mantemos a versão do Java -->
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>17</java.version>
+        <!-- Define a versão do Spring Boot para todo o projeto -->
+        <spring-boot.version>3.2.0</spring-boot.version>
     </properties>
 
-    <dependencies>
-        <!--
-          DEPENDÊNCIAS DO SPRING BOOT (NOVAS)
-        -->
+    <!-- Gerenciamento centralizado de versões do Spring Boot -->
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
-        <!-- 1. Starter para criar APIs Web (inclui o servidor Tomcat) -->
+    <dependencies>
+        <!-- Pacote principal para criar APIs Web com Spring Boot -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!-- 2. Starter para JDBC (facilita o acesso ao banco e gerencia o pool de conexões) -->
+        <!-- Pacote para se conectar a bancos de dados usando JDBC (JdbcTemplate) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
 
-        <!--
-          DEPENDÊNCIA DO BANCO (A MESMA DE ANTES, ATUALIZADA)
-        -->
+        <!-- Conector do MySQL (versão segura e atualizada) -->
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <version>8.4.0</version>
+            <scope>runtime</scope>
         </dependency>
-
     </dependencies>
 
     <build>
+        <!-- A seção <resources> foi removida.
+             Vamos confiar na configuração padrão do Maven
+             e na marcação da pasta "Resources Root" (azul) do IntelliJ.
+        -->
         <plugins>
             <!-- Plugin principal do Spring Boot para "empacotar" a aplicação -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <!-- Define a classe que o Spring deve rodar (a que criamos) -->
+                    <mainClass>br.com.assistente.pet.ApiApplication</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
