--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
         <!-- Pacote para se conectar a bancos de dados usando JDBC (JdbcTemplate) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
